Fix timeline clipping issue and overflow in mobile view

--- a/resources/css/bullinger-theme.css
+++ b/resources/css/bullinger-theme.css
@@ -1160,3 +1160,12 @@ pb-split-list::part(items) {
     display: block!important;
     white-space:nowrap;
 }
+
+.timeline {
+    width: 100%;
+    overflow-x: scroll;
+}
+
+.timeline pb-timeline {
+    width: 96%
+}
